--- a/src/components/DetalhesProdutoModal/DetalhesProdutoModal.css
+++ b/src/components/DetalhesProdutoModal/DetalhesProdutoModal.css
@@ -2,7 +2,9 @@
   max-width: 70%;
   height: auto;
 }
-li {
+.lista p {
+  font-size:medium;
+  padding-top: 5px;
   padding-left: 35px;
   background-image: url('../../assets/icon.png');
   background-repeat: no-repeat;
